исправление замечаний по коду из Sonar
git-svn-id: https://share.curs.ru/svn/showcase/trunk@2900 322482b4-72a2-ae44-8c81-ef1a4f415bef